# agents

./: .gitignore  .lighthouserc.json  CLAUDE.md  MANIFEST-fragment.md  README.md  knip.json  package-lock.json  package.json  playwright.config.ts
.github/ci/: README.md  lh-bless.sh
.github/workflows/: agents-ci.yml  lighthouse-ci.yml  pf-runtime-ci.yml
.planning/: BACKLOG.md  HANDOFF-CAPABILITY-CONSOLIDATION-20260520.md  agent-role-skill-ownership-cleanup-20260520.html  agent-role-skill-ownership-cleanup-20260520.md  handoff-codex.md  labyrinth-redaction-scope.html  labyrinth-redaction-scope.md  phase-4-7-prettyfly-runtime-ARCHIVED.md  phase-4-8-1-direct-gmail-drafts.html  phase-4-8-1-direct-gmail-drafts.md  technical-operator-profile-boundary-20260520.html  technical-operator-profile-boundary-20260520.md
.planning/phase-4-7-prettyfly-runtime/: CUTOVER_C_PLAYBOOK.md  G1_REFRAME_2026-05-06.md  PLAN.md  STATUS.md
.planning/post-phase-4-7-0/: NEXT_PHASE_PLAN.md  ONYX_CHERRYPICK.md
_archive/2026-05-mc-slack-takeover/: SOUL-radar-PROJECT-TIER.md
_inbox/cc-scout/: 2026-05-29-digest.md
_inbox/hermes-scout/: 2026-05-29-digest.md
_inbox/koho-ops/: 2026-05-26-consultops-pulse-v1.md  2026-05-26-consultops-pulse-v2.md
_inbox/mcp-scout/: 2026-05-29-digest.md
_inbox/morning-logs/: 2026-05-21-morning-logs.md  2026-05-22-morning-logs.md  2026-05-23-morning-logs.md  2026-05-24-morning-logs.md  2026-05-25-contractual-commitments-daily-brief-v0.md
_inbox/pkm-scout/: 2026-05-29-digest.md
_inbox/technical-operator-reviews/: 2026-05-20-review-marin-aeo-opportunity-scout.md  2026-05-21-review-technical-operator-technical-review.md  2026-05-22-session-marc-proposal-workflow-pr.md  2026-05-22-session-technical-operator-coding-session-review.md
_meta/: ORG-CHART.md  ROUTING-TABLE.md  agent-fleet-spec.md
_meta/decisions/: 2026-05-04-adopt-hermes.md  2026-05-04-vanclief-world-model-audit.md  2026-05-05-litellm-routing-stack.md  2026-05-05-slack-ecosystem-pivot.md  2026-05-05-substrate-architecture.md  2026-05-06-prettyfly-runtime-bare-metal.md  2026-05-16-agentic-os-hybrid-runtime-lanes.md  2026-05-18-agent-shape-11-file-contract.md  2026-05-18-generate-handoff-shared-skill.md  2026-05-18-hermes-pfos-event-contract.md  2026-05-18-subproject-to-profile-trigger.md  2026-05-20-capability-build-sequence.md  2026-05-20-direct-gmail-drafts-for-marin.md  2026-05-20-honcho-peer-card-atlas.md  2026-05-20-labyrinth-redaction-scope.md  2026-05-20-prettyfly-fleet-plugin.md  (+11 more)
docs/: agora-bus.md  capability-roadmap.md  migration-runbook.md  slack-block-kit-scope-add.md
fleet/: limits.json
honcho/: docker-compose.yml  env.template  honcho-hermes-plugin.json.template  runbook.md
mcp-servers/laik/: README.md  SPEC.md  pyproject.toml  server.py  smoke.py
pf-runtime/: SPEC.md  pyproject.toml
pf-runtime/_archive/2026-05-06-pre-pivot/launchagents/: com.prettyfly.g1-baseline-capture.plist  com.prettyfly.g1-status-monitor.plist
pf-runtime/config/: triage-rules.example.yaml
pf-runtime/docs/: ADAPTER_PLUGIN_INTERFACE.md  COMMUNICATIONS_TRIAGE.md  CONNECT_EMAILS_RUNBOOK.md  MEMORY_LIFECYCLE.md  SKILL_SELF_GEN_BOUNDS.md
pf-runtime/evals/personal/: sample-promptfoo-report.json
pf-runtime/launchd/: com.prettyfly.pf-triage.plist
pf-runtime/pf_runtime/: __init__.py  __main__.py  config.py
pf-runtime/pf_runtime/channels/: slack.py
pf-runtime/pf_runtime/communications/: account_registry.py  calendar_extraction.py  cli.py  providers.py  tools.py  triage_skill.py
pf-runtime/pf_runtime/communications/clients/: gmail.py
pf-runtime/pf_runtime/dream/: bounds_audit.py  post_session.py
pf-runtime/pf_runtime/kanban/: __init__.py  store.py
pf-runtime/pf_runtime/memory/: __init__.py  tier1_soul.py  tier2_buffer.py  tier3_episodic.py  tier4_skills.py
pf-runtime/pf_runtime/oauth/: google.py  microsoft.py  provision.py
pf-runtime/pf_runtime/runtime/: __init__.py  gateway.py  inbound_ledger.py  loop.py  model_adapter.py  pfos_emit.py  tool_dispatch.py  trace.py
pf-runtime/pf_runtime/stubs/: spec_stubs.py
pf-runtime/scripts/: eval_profile_prompt.py
pf-runtime/tests/: conftest.py  test_account_registry.py  test_atlas_blind_interview.py  test_bounds_audit.py  test_calendar_extraction.py  test_cli_main.py  test_clients_gmail.py  test_clients_graph.py  test_clients_imap.py  test_communications_schema.py  test_dream_loop.py  test_gateway_pfos_emit.py  test_gateway_reconnect.py  test_kanban_store.py  test_loop_skills_prompt.py  test_main_inprocess.py  test_oauth_google.py  test_oauth_provision.py  test_pfos_emit.py  test_sentry_init.py  test_slack_channel.py  test_sync_state_store.py  test_tool_dispatch.py  test_triage_skill.py
scripts/: audit-devserver-build.mjs  backfill-eval-traces.py  bootstrap-profile.sh  build-agency-shared-skills.py  check-autonomy-gates.sh  clone-profile-baseline.sh  email-triage-eval-nightly.sh  emit-agent-event.py  fleet-invoke.sh  g1-baseline-capture.sh  g1-status-monitor.sh  hermes-commit-watcher.sh  hermes-feature-audit.sh  honcho-db-rotate-password.py  honcho-publish-eval-trace.py  honcho-substrate-bootstrap.py  inbox-archive.sh  lint-profile.sh  morning-logs.py  pair-telegram.sh  pf-cutover-preflight.sh  pf-qa.sh  phase-0-gate-eval.sh  phase-0-soak-compressed.sh  phase-0-soak-tick.sh  pivot-gates-smoke.sh  poll-slack-approvals.py  registry-rebuild.py  scout-eval-summary.py  scout-eval.sh  scout-eval.workflow.mjs  seal-profile.sh  stamp-a2a-cards.sh  sync-profile.sh  test_scout_eval_summary.py  validate-agency-skills.py  validate-profile.sh  vanclief-eval-summary.py  verify-event-contract.py  wire-fleet-cron.sh
tests/: __init__.py  clone-profile-baseline.test.sh  communications_marketplace_contract.py  file_shape_classifier.py  g1_status_monitor_smoke.sh  memory_persistence_e2e.py  memory_tier1_smoke.py  memory_tier2_smoke.py  per_turn_metrics_smoke.py  profile_dir_contract.py  spec_self_consistency.py  test_agent_events.py  test_emit_agent_event_cli.py  test_gmail_drafts.py  test_morning_logs.py  test_verify_event_contract.py  tier4_isolation.py
(+701 files in other folders)
